--- a/Information_on_Body_Surfing/Videos/videos.html
+++ b/Information_on_Body_Surfing/Videos/videos.html
@@ -45,7 +45,7 @@
         </div>
                     <div class="col-xs-3">
                         <a class="thumbnail" href="https://youtube.com">
-                            <img src="https://image.freepik.com/free-icon/play-button_318-42541.jpg" />
+                            <img src="https://image.freepik.com/free-icon/play-button_318-42541.jpg14th" />
                             <caption>Bodysurfing Laguna Beach, CA: Fall 2014</caption>
                         </a>
                         
