--- a/Home/index.html
+++ b/Home/index.html
@@ -43,12 +43,47 @@
         </div>
 
         <div class="jumbotron">
-            <h1 id="Header">Body Surfing </h1>
-            <p id="Content">Defintion: to float on the crest of incoming waves without using a board</p>
-            <img src="" />
-            <p><a class="btn btn-success btn-large" href="https://giphy.com/search/body-surfing" role="button">Giphys</a></p>
+            <h1 id="Header"> Welcome Bodysurfers! </h1>
+            <p id="Content">People who live near the water know that going to the beach doesnt have to require
+a lot of planning. Sometimes you just throw on your swimsuit and jump in.
+Body surfing is the oldest form of surfing. I learned how to body surf as a kid, when
+my sister and I were just splashing around in the ocean. She suggested we swim
+further out and then try to ride a wave back in.
+It wasnt easy, but after several failed attempts, I finally caught a wave big enough to
+carry me all the way back to the shoreline, where I washed up like seal on its belly.
+The Monterey Bay Body Surfing club is a group for body surfers who want to perfect
+the art of a riding a wave- no board required!</p>
+            <img id="Gif" src="https://media.giphy.com/media/YUIu39kq6sAfe/giphy.gif" />
+            
         </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="container">
+		<h1>Leave a Comment!</h1>
+		<hr/>
+
+		<div class="Row" id="search-bar">
+			<div class="col-md-10">
+				<input type="text" class="form-control input-lg " id="message" placeholder="Type in your message">
+			</div>
+			<div class="col-md-2">
+				<button type="submit" id="post-btn" class="btn btn-primary btn-lg btn-block">Post</button>
+			</div>
+		</div>
+
+		<div id="wall">
+
+		</div>
+
+	</div>
+	
+	<templates style="display: none">
+	
+
 </body>
 
 </html>
