--- a/Upcoming_Events/events.html
+++ b/Upcoming_Events/events.html
@@ -70,17 +70,17 @@
                 <label>Last Name:</label>
                 <input type="text" name="lname" placeholder="Last Name" class="form-control" id=""><br>
                 <label>E-mail:</label>
-                <input type="text" name="age" placeholder="Age" class="form-control" id=""><br>
+                <input type="text" name="E-mail" placeholder="E-mail" class="form-control" id=""><br>
                 <label>Age:</label>
-                <input type="text" name="experience" placeholder="Years of Experience" class="form-control" id=""><br>
+                <input type="text" name="Age" placeholder="Age" class="form-control" id=""><br>
                 <label>Years of Experience:</label>
-                <input type="text" name="height" placeholder="Height" class="form-control" id=""><br>
+                <input type="text" name="Years of Experience" placeholder="Years of Experience" class="form-control" id=""><br>
                 <label>Height:</label>
-                <input type="text" name="weight" placeholder="Weight" class="form-control" id="1"><br>
+                <input type="text" name="Height" placeholder="Height" class="form-control" id="1"><br>
                 <label>Weight:</label>
-                <input type="text" name="wetsuit" placeholder="Prefered Wetsuit Size" class="form-control" id="1"><br>
+                <input type="text" name="Weight" placeholder="Weight" class="form-control" id="1"><br>
                 <label>Prefered Wetsuit Size:</label>
-                <input type="" class="form-control" id="1">
+                <input type="text" name="wetsuit" placeholder="Prefered Wetsuit Size" class="form-control" id="1">
                 <button type="button" class="btn btn-success">submit</button>
             </div>
         </form>
