--- a/Home/index.html
+++ b/Home/index.html
@@ -44,6 +44,7 @@
 
         <div class="jumbotron">
             <h1 id="Header"> Welcome Bodysurfers! </h1>
+            <h2 id="Sub-Header">A word from the owner of the Monterey Body Surfing Society</h2>
             <p id="Content">People who live near the water know that going to the beach doesnt have to require
 a lot of planning. Sometimes you just throw on your swimsuit and jump in.
 Body surfing is the oldest form of surfing. I learned how to body surf as a kid, when
@@ -53,7 +54,7 @@ It wasnt easy, but after several failed attempts, I finally caught a wave big en
 carry me all the way back to the shoreline, where I washed up like seal on its belly.
 The Monterey Bay Body Surfing club is a group for body surfers who want to perfect
 the art of a riding a wave- no board required!</p>
-            <img id="Gif" src="https://media.giphy.com/media/YUIu39kq6sAfe/giphy.gif" />
+            <img id="Gif" class="img circle" src="https://media.giphy.com/media/YUIu39kq6sAfe/giphy.gif" />
             
         </div>
     </div>
