--- a/Information_on_Body_Surfing/Quotes/quotes.html
+++ b/Information_on_Body_Surfing/Quotes/quotes.html
@@ -57,7 +57,9 @@
             <p id="Content">"Never drive away from good surf." Roger Sharp</p>
             <p id="Content">"Surfing is attitude dancing." Gerry Lopez</p>
             <p id="Content">"We're all equal before a wave." Laird Hamilton</p>
+            <img id="Gif" class="img circle" src="https://media.giphy.com/media/hwvwuqUNUg8x2/giphy.gif"/>
         </div>
+
 </body>
 
 </html>
