--- a/Home/index.html
+++ b/Home/index.html
@@ -75,10 +75,12 @@ the art of a riding a wave- no board required!</p>
 				<button type="submit" id="post-btn" class="btn btn-primary btn-lg btn-block">Post</button>
 			</div>
 		</div>
-
-		<div id="wall">
-
-		</div>
+<div class="wall-backdrop">
+    <div id="wall">
+        
+    </div>
+</div>
+		
 
 	</div>
 	
