--- a/Information_on_Body_Surfing/Quotes/quotes.html
+++ b/Information_on_Body_Surfing/Quotes/quotes.html
@@ -5,10 +5,10 @@
     <title>Monterey Body Surfing Society</title>
 
     <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
-        <script src="../../Home/myscript.js"></script>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="../../Home/styles.css">
+    <script src="../../Home/myscript.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../../Home/styles.css">
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example">
@@ -16,30 +16,51 @@
         <h1 id="header">Monterey Body Surfing Society</h1>
         <p id="motto">No Boards Required N.B.R.</p>
 
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <div id="" class="text-center">
+        <div>
+            <nav class="navbar navbar-default">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+                        <a class="navbar-brand" href="index.html"><img src="../../seal_logo.png"></a>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-3">
+                            <div id="" class="text-center">
 
-                    <ul class="nav nav-pills">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="../../Home/index.html">Home</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="../Information_on_Body_Surfing/info.html" role="button" aria-haspopup="true" aria-expanded="false">What is Body Surfing?</a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="../Images/images.html">Images</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="../Quotes/quotes.html">Quotes</a>
-                                <div class="dropdown-divider"></div>
-                                 <a class="dropdown-item" href="../Videos/videos.html">Videos</a>
+                                <ul class="nav nav-pills">
+
+                                    <li class="nav-item">
+                                        <a class="nav-link active" href="index.html">Home</a>
+                                    </li>
+
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="info.html" role="button" aria-haspopup="true" aria-expanded="false">What is Body Surfing?</a>
+
+                                        <div class="dropdown-menu">
+                                            <a class="dropdown-item" href="../Information_on_Body_Surfing/Images/images.html">Images</a>
+
+                                            <div class="dropdown-divider"></div>
+                                            <a class="dropdown-item" href="../Information_on_Body_Surfing/Quotes/quotes.html">Quotes</a>
+
+                                            <div class="dropdown-divider"></div>
+                                            <a class="dropdown-item" href="../Information_on_Body_Surfing/Videos/videos.html">Videos</a>
+
+                                        </div>
+                                    </li>
+                                    <li><a href="../Upcoming_Events/events.html">Upcoming Events</a></li>
+
+                                </ul>
                             </div>
-                        </li>
-                        <li><a href="../../Upcoming_Events/events.html">Upcoming Events</a></li>
 
-                    </ul>
+                        </div>
+                    </div>
                 </div>
-
-            </div>
+            </nav>
         </div>
 
         <div class="jumbotron">
@@ -57,7 +78,7 @@
             <p id="Content">"Never drive away from good surf." Roger Sharp</p>
             <p id="Content">"Surfing is attitude dancing." Gerry Lopez</p>
             <p id="Content">"We're all equal before a wave." Laird Hamilton</p>
-            <img id="Gif" class="img circle" src="https://media.giphy.com/media/hwvwuqUNUg8x2/giphy.gif"/>
+            <img id="Gif" class="img circle" src="https://media.giphy.com/media/hwvwuqUNUg8x2/giphy.gif" />
         </div>
 
 </body>
