--- a/Home/index.html
+++ b/Home/index.html
@@ -16,46 +16,61 @@
         <h1 id="header">Monterey Body Surfing Society</h1>
         <p id="motto">No Boards Required N.B.R.</p>
 
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <div id="" class="text-center">
+        <div>
+            <nav class="navbar navbar-pills">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+                        <a class="navbar-brand" href=""><img src="../seal_logo.png"></a>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-3">
+                            <div id="" class="text-center">
 
-                    <ul class="nav nav-pills">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="../Home/index.html">Home</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="../Information_on_Body_Surfing/info.html" role="button" aria-haspopup="true" aria-expanded="false">What is Body Surfing?</a>
-                            <div class="dropdown-menu">
-                                 <a class="dropdown-item" href="../Information_on_Body_Surfing/Images/images.html">Images</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="../Information_on_Body_Surfing/Quotes/quotes.html">Quotes</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="../Information_on_Body_Surfing/Videos/videos.html">Videos</a>
+                                <ul class="nav nav-pills">
+
+                                    <li class="nav-item">
+                                        <a class="nav-link active" href="index.html">Home</a>
+                                    </li>
+
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="info.html" role="button" aria-haspopup="true" aria-expanded="false">What is Body Surfing?</a>
+
+                                        <div class="dropdown-menu">
+                                            <a class="dropdown-item" href="../Information_on_Body_Surfing/Images/images.html">Images</a>
+
+                                            <div class="dropdown-divider"></div>
+                                            <a class="dropdown-item" href="../Information_on_Body_Surfing/Quotes/quotes.html">Quotes</a>
+
+                                            <div class="dropdown-divider"></div>
+                                            <a class="dropdown-item" href="../Information_on_Body_Surfing/Videos/videos.html">Videos</a>
+
+                                        </div>
+                                    </li>
+                                    <li><a href="../Upcoming_Events/events.html">Upcoming Events</a></li>
+
+                                </ul>
                             </div>
-                        </li>
-                        <li><a href="../Upcoming_Events/events.html">Upcoming Events</a></li>
 
-                    </ul>
+                        </div>
+                    </div>
                 </div>
-
-            </div>
+            </nav>
         </div>
 
         <div class="jumbotron">
             <h1 id="Header"> Welcome Bodysurfers! </h1>
             <h2 id="Sub-Header">A word from the owner of the Monterey Body Surfing Society</h2>
-            <p id="Content">People who live near the water know that going to the beach doesnt have to require
-a lot of planning. Sometimes you just throw on your swimsuit and jump in.
-Body surfing is the oldest form of surfing. I learned how to body surf as a kid, when
-my sister and I were just splashing around in the ocean. She suggested we swim
-further out and then try to ride a wave back in.
-It wasnt easy, but after several failed attempts, I finally caught a wave big enough to
-carry me all the way back to the shoreline, where I washed up like seal on its belly.
-The Monterey Bay Body Surfing club is a group for body surfers who want to perfect
-the art of a riding a wave- no board required!</p>
+            <p id="Content">People who live near the water know that going to the beach doesnt have to require a lot of planning. Sometimes you just throw on your swimsuit and jump in. Body surfing is the oldest form of surfing. I learned how to body surf as a kid, when
+                my sister and I were just splashing around in the ocean. She suggested we swim further out and then try to ride a wave back in. It wasnt easy, but after several failed attempts, I finally caught a wave big enough to carry me all the way
+                back to the shoreline, where I washed up like seal on its belly. The Monterey Bay Body Surfing club is a group for body surfers who want to perfect the art of a riding a wave- no board required!</p>
             <img id="Gif" class="img circle" src="https://media.giphy.com/media/YUIu39kq6sAfe/giphy.gif" />
-            
+
         </div>
     </div>
     <br>
@@ -64,28 +79,28 @@ the art of a riding a wave- no board required!</p>
     <br>
     <br>
     <div class="container">
-		<h1>Leave a Comment!</h1>
-		<hr/>
+        <h1>Leave a Comment!</h1>
+        <hr/>
 
-		<div class="Row" id="search-bar">
-			<div class="col-md-10">
-				<input type="text" class="form-control input-lg " id="message" placeholder="Type in your message">
-			</div>
-			<div class="col-md-2">
-				<button type="submit" id="post-btn" class="btn btn-primary btn-lg btn-block">Post</button>
-			</div>
-		</div>
-<div class="wall-backdrop">
-    <div id="wall">
-        
+        <div class="Row" id="search-bar">
+            <div class="col-md-10">
+                <input type="text" class="form-control input-lg " id="message" placeholder="Type in your message">
+            </div>
+            <div class="col-md-2">
+                <button type="submit" id="post-btn" class="btn btn-primary btn-lg btn-success">Post</button>
+            </div>
+        </div>
+        <div class="wall-backdrop">
+            <div id="wall">
+
+            </div>
+        </div>
+
+
     </div>
-</div>
-		
 
-	</div>
-	
-	<templates style="display: none">
-	
+    <templates style="display: none">
+
 
 </body>
 
