--- a/Information_on_Body_Surfing/Images/images.html
+++ b/Information_on_Body_Surfing/Images/images.html
@@ -17,7 +17,7 @@
         <p id="motto">No Boards Required N.B.R.</p>
 
         <div>
-            <nav class="navbar navbar-default">
+            <nav class="navbar navbar-pills">
                 <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -35,24 +35,24 @@
                                 <ul class="nav nav-pills">
 
                                     <li class="nav-item">
-                                        <a class="nav-link active" href="index.html">Home</a>
+                                        <a class="menu" class="nav-link active" href="../../Home/index.html">Home</a>
                                     </li>
 
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="info.html" role="button" aria-haspopup="true" aria-expanded="false">What is Body Surfing?</a>
+                                        <a class="menu" class="nav-link dropdown-toggle" data-toggle="dropdown" href="info.html" role="button" aria-haspopup="true" aria-expanded="false">Body Surfing</a>
 
                                         <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="../Information_on_Body_Surfing/Images/images.html">Images</a>
+                                            <a class="menu" class="dropdown-item" href="../Images/images.html">Images</a>
 
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="../Information_on_Body_Surfing/Quotes/quotes.html">Quotes</a>
+                                            <a class="menu" class="dropdown-item" href="../Quotes/quotes.html">Quotes</a>
 
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="../Information_on_Body_Surfing/Videos/videos.html">Videos</a>
+                                            <a class="menu" class="dropdown-item" href="../Videos/videos.html">Videos</a>
 
                                         </div>
                                     </li>
-                                    <li><a href="../Upcoming_Events/events.html">Upcoming Events</a></li>
+                                    <li><a class="menu" href="../../Upcoming_Events/events.html">Upcoming Events</a></li>
 
                                 </ul>
                             </div>
@@ -64,7 +64,7 @@
         </div>
 
         <div class="jumbotron">
-            <h1 id="Header">Check out these Pictures of body surfers & Landscapes</h1>
+            <h1 id="Header">Check out these Pictures of Body Surfers & Landscapes</h1>
             <img src="" />
 
         </div>
