--- a/Home/index.html
+++ b/Home/index.html
@@ -13,7 +13,7 @@
 
 <body data-spy="scroll" data-target="#navbar-example">
     <div class="container-fluid">
-        <h1 id="header">Monterey Body Surfing Society</h1>
+        <h1 id="Header">Monterey Body Surfing Society</h1>
         <p id="motto">No Boards Required N.B.R.</p>
 
         <div>
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-                        <a class="navbar-brand" href=""><img src="../seal_logo.png"></a>
+                        <a class="navbar-brand" href="../Home/index.html"><img src="../seal_logo.png"></a>
                     </div>
                     <div class="row">
                         <div class="col-md-6 col-md-offset-3">
@@ -35,24 +35,24 @@
                                 <ul class="nav nav-pills">
 
                                     <li class="nav-item">
-                                        <a class="nav-link active" href="index.html">Home</a>
+                                        <a class="menu" class="nav-link active" href="../Home/index.html">Home</a>
                                     </li>
 
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="info.html" role="button" aria-haspopup="true" aria-expanded="false">What is Body Surfing?</a>
+                                        <a class="menu" class="nav-link dropdown-toggle" data-toggle="dropdown" href="info.html" role="button" aria-haspopup="true" aria-expanded="false">Body Surfing</a>
 
                                         <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="../Information_on_Body_Surfing/Images/images.html">Images</a>
+                                            <a class="menu" class="dropdown-item" href="../Information_on_Body_Surfing/Images/images.html">Images</a>
 
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="../Information_on_Body_Surfing/Quotes/quotes.html">Quotes</a>
+                                            <a class="menu" class="dropdown-item" href="../Information_on_Body_Surfing/Quotes/quotes.html">Quotes</a>
 
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="../Information_on_Body_Surfing/Videos/videos.html">Videos</a>
+                                            <a class="menu" class="dropdown-item" href="../Information_on_Body_Surfing/Videos/videos.html">Videos</a>
 
                                         </div>
                                     </li>
-                                    <li><a href="../Upcoming_Events/events.html">Upcoming Events</a></li>
+                                    <li class ="menu"><a href="../Upcoming_Events/events.html">Upcoming Events</a></li>
 
                                 </ul>
                             </div>
@@ -65,14 +65,17 @@
 
         <div class="jumbotron">
             <h1 id="Header"> Welcome Bodysurfers! </h1>
-            <h2 id="Sub-Header">A word from the owner of the Monterey Body Surfing Society</h2>
+            <h2 id="Sub-Header">A Word from the Owner of the Monterey Body Surfing Society</h2>
             <p id="Content">People who live near the water know that going to the beach doesnt have to require a lot of planning. Sometimes you just throw on your swimsuit and jump in. Body surfing is the oldest form of surfing. I learned how to body surf as a kid, when
                 my sister and I were just splashing around in the ocean. She suggested we swim further out and then try to ride a wave back in. It wasnt easy, but after several failed attempts, I finally caught a wave big enough to carry me all the way
                 back to the shoreline, where I washed up like seal on its belly. The Monterey Bay Body Surfing club is a group for body surfers who want to perfect the art of a riding a wave- no board required!</p>
-            <img id="Gif" class="img circle" src="https://media.giphy.com/media/YUIu39kq6sAfe/giphy.gif" />
+                
 
         </div>
     </div>
+    
+     <h1 id="lol">What is Body Surfing?</h1>
+                <p class="lol" id="Content">Body surfing is when a person uses their body to float in the crest of a incoming wave.</p>
     <br>
     <br>
     <br>
